force-app/main/default/objects/QuoteLineItem/fields/Ciudad_Placa__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Placa__c</fullName>
    <formula>Product2.Ciudad_de_la_placa__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudad Placa</label>
    <type>Text</type>
</CustomField>