force-app/main/default/objects/QuoteLineItem/fields/Cuota_inicial2__c.field-meta.xml
<CustomField>
    <fullName>Cuota_inicial2__c</fullName>
    <label>Cuota Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>