force-app/main/default/objects/QuoteLineItem/fields/Cuota_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Inicial__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cuota Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>