force-app/main/default/objects/QuoteLineItem/fields/Cuota_mensual2__c.field-meta.xml
<CustomField>
    <fullName>Cuota_mensual2__c</fullName>
    <label>Cuota mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>