force-app/main/default/objects/QuoteLineItem/fields/Desc_Manual__c.field-meta.xml
<CustomField>
    <fullName>Desc_Manual__c</fullName>
    <label>Desc. % Manual</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>