force-app/main/default/objects/QuoteLineItem/fields/Descuento_Valor__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Valor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Descuento(Valor)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>