force-app/main/default/objects/QuoteLineItem/fields/DescValARD__c.field-meta.xml
<CustomField>
    <fullName>DescValARD__c</fullName>
    <label>Desc.Val.ARD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>