force-app/main/default/objects/QuoteLineItem/fields/Desembolso_entidad_financiera__c.field-meta.xml
<CustomField>
    <fullName>Desembolso_entidad_financiera__c</fullName>
    <label>Desembolso entidad financiera</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>