force-app/main/default/objects/QuoteLineItem/fields/FinancieraPlan__c.field-meta.xml
<CustomField>
    <fullName>FinancieraPlan__c</fullName>
    <label>Financiera/Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>