force-app/main/default/objects/QuoteLineItem/fields/Foto_modelo_interes__c.field-meta.xml
<CustomField>
    <fullName>Foto_modelo_interes__c</fullName>
    <formula>IMAGE
(
IF
(
NOT
(
ISBLANK( PricebookEntry.Product2.ProductCode )
),
 PricebookEntry.Product2.DisplayUrl ,
&quot;https://c.na15.content.force.com/servlet/servlet.ImageServer?id=015o0000000hzS9&amp;oid=00Do0000000aReC&amp;lastMod=1383010138000&quot;
),
&quot;Imagen no disponible&quot;,
149,
270
)</formula>
    <label>Foto modelo interés</label>
    <type>Text</type>
</CustomField>