force-app/main/default/objects/QuoteLineItem/fields/Impoconsumo__c.field-meta.xml
<CustomField>
    <fullName>Impoconsumo__c</fullName>
    <label>Ipoconsumo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>