force-app/main/default/objects/QuoteLineItem/fields/integracion_by_pass__c.field-meta.xml
<CustomField>
    <fullName>integracion_by_pass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used only for development purposes</description>
    <label>integracion by pass</label>
    <type>Checkbox</type>
</CustomField>