force-app/main/default/objects/QuoteLineItem/fields/Iva__c.field-meta.xml
<CustomField>
    <fullName>Iva__c</fullName>
    <label>Iva</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>