force-app/main/default/objects/QuoteLineItem/fields/Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje__c</fullName>
    <formula>Product2.Kilometraje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kilometraje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>