force-app/main/default/objects/QuoteLineItem/fields/Linea_version__c.field-meta.xml
<CustomField>
    <fullName>Linea_version__c</fullName>
    <formula>Product2.Linea_version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linea version</label>
    <type>Text</type>
</CustomField>