force-app/main/default/objects/QuoteLineItem/fields/Modelo_a_o__c.field-meta.xml
<CustomField>
    <fullName>Modelo_a_o__c</fullName>
    <formula>Product2.Modelo_Ao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo año</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>