force-app/main/default/objects/QuoteLineItem/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones de cotización</label>
    <length>270</length>
    <type>LongTextArea</type>
</CustomField>