force-app/main/default/objects/QuoteLineItem/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <formula>IF( Product2.Inventario_de_Usados__c &lt;&gt; null, Product2.Inventario_de_Usados__r.Placas__c ,&quot;No Definido&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placa</label>
    <type>Text</type>
</CustomField>