force-app/main/default/objects/QuoteLineItem/fields/Plan_financiero2__c.field-meta.xml
<CustomField>
    <fullName>Plan_financiero2__c</fullName>
    <label>Plan financiero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>