force-app/main/default/objects/QuoteLineItem/fields/Precio_de_lista_antes_de_impuesto__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_lista_antes_de_impuesto__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio de lista antes de impuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>