force-app/main/default/objects/QuoteLineItem/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>