force-app/main/default/objects/QuoteLineItem/fields/Saldo_a_financiar__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_financiar__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Saldo a financiar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>