force-app/main/default/objects/QuoteLineItem/fields/Sitio_de_matrcula__c.field-meta.xml
<CustomField>
    <fullName>Sitio_de_matrcula__c</fullName>
    <label>Sitio de matrícula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>