force-app/main/default/objects/QuoteLineItem/fields/SO_Valor_IVA__c.field-meta.xml
<CustomField>
    <fullName>SO_Valor_IVA__c</fullName>
    <formula>Precio_de_lista_antes_de_impuesto__c  *  (Iva__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Iva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>