force-app/main/default/objects/QuoteLineItem/fields/SO_Valor_Porcentaje_ARD__c.field-meta.xml
<CustomField>
    <fullName>SO_Valor_Porcentaje_ARD__c</fullName>
    <formula>(Precio_de_lista_antes_de_impuesto__c  *  DescARD__c) *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor % ARD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>