force-app/main/default/objects/QuoteLineItem/fields/Soat__c.field-meta.xml
<CustomField>
    <fullName>Soat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Soat</label>
    <referenceTo>Soat__c</referenceTo>
    <relationshipLabel>Partidas de presupuesto</relationshipLabel>
    <relationshipName>Partidas_de_presupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>