force-app/main/default/objects/QuoteLineItem/fields/Subtotal_Precio_Base__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Precio_Base__c</fullName>
    <label>Subtotal Precio Base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>