force-app/main/default/objects/QuoteLineItem/fields/Subtotal_Precio_Motocicleta__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Precio_Motocicleta__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Subtotal Precio Motocicleta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>