force-app/main/default/objects/QuoteLineItem/fields/Tasa_de_interes__c.field-meta.xml
<CustomField>
    <fullName>Tasa_de_interes__c</fullName>
    <inlineHelpText>Si el interes es menor al 1%, utiliza el siguiente formato ejemplo: (0,08).</inlineHelpText>
    <label>Tasa de interés</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>