force-app/main/default/objects/QuoteLineItem/fields/Tipo_de_carroceria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_carroceria__c</fullName>
    <formula>Product2.Carrocera__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de carrocería</label>
    <type>Text</type>
</CustomField>