force-app/main/default/objects/QuoteLineItem/fields/Tipo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Producto__c</fullName>
    <formula>IF( Quote.RecordType.Name=&quot;Cotizaciones Autos&quot;, &quot;Auto&quot;, &quot;Moto&quot; )</formula>
    <label>Tipo de Producto</label>
    <type>Text</type>
</CustomField>