force-app/main/default/objects/QuoteLineItem/fields/Total_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Total_a_Pagar__c</fullName>
    <formula>(Subtotal_Precio_Motocicleta__c +  Casco__c+ Accesorios__c)* Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total a Pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>