force-app/main/default/objects/QuoteLineItem/fields/Total_cotizacion_renting__c.field-meta.xml
<CustomField>
    <fullName>Total_cotizacion_renting__c</fullName>
    <formula>Valor_total_renting__c + (( Valor_matrcula__c +  Valor_soat__c  +
Valor_seguro_robo__c )* Quantity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total cotización</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>