force-app/main/default/objects/QuoteLineItem/fields/Valor_Dummy_3__c.field-meta.xml
<CustomField>
    <fullName>Valor_Dummy_3__c</fullName>
    <label>Valor Dummy 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>