force-app/main/default/objects/QuoteLineItem/fields/Valor_IVA__c.field-meta.xml
<CustomField>
    <fullName>Valor_IVA__c</fullName>
    <formula>ROUND(((  PricebookEntry.UnitPrice  / (1 + ( Porcentaje_IVA__c + porcentaje_impuesto_al_consumo__c ))) - Descuento_Valor__c ) * Porcentaje_IVA__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>