force-app/main/default/objects/QuoteLineItem/fields/Valor_soat__c.field-meta.xml
<CustomField>
    <fullName>Valor_soat__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor soat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>