force-app/main/default/objects/QuoteLineItem/fields/Valor_total_renting__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_renting__c</fullName>
    <formula>(((  PricebookEntry.UnitPrice / (1 + ( Porcentaje_IVA__c + porcentaje_impuesto_al_consumo__c ))) - Descuento_Valor__c ) + Valor_IVA__c + Valor_impuesto_al_consumo__c ) * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>