force-app/main/default/objects/QuoteLineItem/fields/Valor_total_vehiculo2__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_vehiculo2__c</fullName>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>