force-app/main/default/objects/QuoteLineItem/fields/Valor_Vehculo2__c.field-meta.xml
<CustomField>
    <fullName>Valor_Vehculo2__c</fullName>
    <label>Valor Vehículo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>