force-app/main/default/objects/QuoteLineItem/validationRules/precio_de_venta_menor_a_precio_de_lista.validationRule-meta.xml
<ValidationRule>
    <fullName>precio_de_venta_menor_a_precio_de_lista</fullName>
    <active>true</active>
    <description>El precio de venta no debe ser menor al precio de lista</description>
    <errorConditionFormula>UnitPrice &lt; PricebookEntry.UnitPrice</errorConditionFormula>
    <errorDisplayField>ListPrice</errorDisplayField>
    <errorMessage>El precio de venta no debe ser menor al precio de lista</errorMessage>
</ValidationRule>