force-app/main/default/objects/QuoteLineItem/validationRules/Valida_Cantidad_Autos.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Cantidad_Autos</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Quote.RecordType.Name =&quot;Cotizaciones Autos&quot;,  Quantity &gt;1,  Quote.IsSyncing = true)</errorConditionFormula>
    <errorMessage>No se puede poner más de 1 auto en cantidad al momento de sincronizar la cotización con la oportunidad, favor corrija la cantidad antes de continuar.</errorMessage>
</ValidationRule>