force-app/main/default/objects/QuoteLineItem/validationRules/valida_Descuento_SinPrecio.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_Descuento_SinPrecio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   CONTAINS($Profile.Name, &quot;motos&quot;), Descuento_Valor__c  &gt; 0,  UnitPrice = 0 )</errorConditionFormula>
    <errorDisplayField>Descuento_Valor__c</errorDisplayField>
    <errorMessage>Favor solicitar descuentos y precios primero antes de indicar un descuento.</errorMessage>
</ValidationRule>