force-app/main/default/objects/QuoteLineItem/validationRules/valida_negativos.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_negativos</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Accesorios__c &lt; 0,  Descuento_Valor__c &lt; 0,   Valor_matrcula__c &lt; 0,  Valor_seguro_robo__c &lt; 0,  Casco__c &lt; 0,  Accesorios__c &lt; 0,  Cuota_Inicial__c &lt; 0)</errorConditionFormula>
    <errorMessage>No se permiten valores negativos por favor verifique sus datos.</errorMessage>
</ValidationRule>