force-app/main/default/objects/QuoteLineItem/validationRules/valida_numeroentero_menora1.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_numeroentero_menora1</fullName>
    <active>true</active>
    <errorConditionFormula>OR (Quantity &lt; 1,AND( 
NOT(REGEX(TEXT( Quantity ), &quot;^\\d+$&quot;)), 
NOT( Quantity =0)))</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>El valor introducido en la cantidad debe ser mayor a 0 y número entero.</errorMessage>
</ValidationRule>